test/org/midica/testfiles/failing/const-name-eq-value.midica
INCLUDE inc/instruments.midica

CONST $a = $a

